# unstash

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.ci-smoke.yaml  compose.dev.yaml  compose.prod.yaml  compose.production.yaml  compose.staging.yaml  compose.yaml
.github/workflows/: ci.yaml  deploy.yaml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth.py  0002_documents.py  0003_connectors.py  0004_search_logs.py  0005_jobs_and_audit.py  0006_rls_policies.py  0007_access_tokens.py  0008_admin_role_grants.py  0009_api_tokens.py  0010_doc_provenance.py  0011_chunks_embedding_nullable.py
backend/src/unstash/: __about__.py  __init__.py  config.py  logging.py  main.py  startup_checks.py
backend/src/unstash/admin/: __init__.py  router.py  schemas.py
backend/src/unstash/auth/: __init__.py  backend.py  db.py  dependencies.py  manager.py  schemas.py  tokens.py
backend/src/unstash/db/: __init__.py  engine.py  session.py
backend/src/unstash/db/models/: __init__.py  access_token.py  api_token.py  audit_log.py  base.py  chunk.py  connector.py  document.py  job_progress.py  org_membership.py  organisation.py  search_log.py  user.py
backend/src/unstash/documents/: __init__.py  mime.py  parser.py  router.py  schemas.py  storage.py  strategy.py
backend/src/unstash/orgs/: __init__.py  dependencies.py  router.py  schemas.py
backend/src/unstash/tasks/: __init__.py  broker.py  context.py  ingest.py
backend/tests/: conftest.py  test_health.py  test_startup_checks.py
backend/tests/integration/: conftest.py  test_admin_users.py  test_api_tokens.py  test_auth.py  test_auth_adversarial.py  test_documents_upload.py  test_harness.py  test_migrations.py  test_orgs.py  test_parse_pipeline.py  test_rls.py  test_worker_org_context.py
docker/: Caddyfile.snippet  README.md  backend.Dockerfile  frontend.Dockerfile  init-db.sh  postgres.Dockerfile
docs/adr/: 0000-record-architecture-decisions.md  0001-initial-stack-choices.md  0002-ci-driven-deployment.md  0003-file-based-secrets-on-vps.md  0004-branch-based-environments.md  0005-multi-tenant-isolation.md  0006-auth-and-cross-tenant-admin.md  0007-frontend-nextjs.md  README.md
docs/runbooks/: README.md  manual-database-migration.md  vps-maintenance.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: ambient.d.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
scripts/: README.md
secrets/: README.md
