[project]
name = "unstash"
version = "0.1.0"
description = "Adaptive document search and organization"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "UNLICENSED" }
authors = [
    { name = "legitmattias" },
]
keywords = ["search", "document", "rag", "semantic-search", "hybrid-search"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=25.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "pyright>=1.1.384",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unstash"]

[tool.uv]
package = true

# -----------------------------------------------------------------------------
# Ruff — linting and formatting
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# A deliberately opinionated ruleset. Explicit > implicit.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "TC",   # flake8-type-checking
    "S",    # flake8-bandit (security)
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "ASYNC", # flake8-async
]
ignore = [
    "D100",  # missing docstring in public module (covered by README)
    "D104",  # missing docstring in public package
    "D203",  # 1 blank line before class docstring (conflicts with D211)
    "D213",  # multi-line docstring summary on second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # docstrings not required in tests
    "S101",   # assert is expected in tests
    "ANN",    # type annotations optional in tests
    "PLR2004", # magic numbers OK in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# -----------------------------------------------------------------------------
# pyright — type checking
# -----------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/.pytest_cache",
    "**/.ruff_cache",
]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "error"

# -----------------------------------------------------------------------------
# pytest — test runner
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--showlocals",
    "--cov=unstash",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:.coverage-html",
    "--cov-branch",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["src/unstash"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pragma: no cover",
]
show_missing = true
skip_covered = false
